<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@android:color/background_light"
                                                 android:fitsSystemWindows="true">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/main.appbar"
		android:layout_width="match_parent"
		android:layout_height="240dp"
		android:fitsSystemWindows="true"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:expandedTitleMarginEnd="64dp"
			app:expandedTitleMarginStart="48dp"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			tools:title="FogelAO">

			<ImageView
				android:id="@+id/avatarView"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:fitsSystemWindows="true"
				android:scaleType="centerCrop"
				app:layout_collapseMode="parallax"
				android:contentDescription="@string/avatar" />

			<android.support.v7.widget.Toolbar
				android:id="@+id/main.toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:fadeScrollbars="true"
				android:scrollbarFadeDuration="6"
				android:scrollbars="horizontal"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
		</android.support.design.widget.CollapsingToolbarLayout>

	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageView
				android:id="@+id/nameIcon"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="24dp"
				android:paddingTop="2dp"
				android:src="@drawable/ic_assignment_black_24dp"
				android:contentDescription="@string/name" />

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/nameView"
				style="@style/itemTextUserInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@id/nameIcon"
				android:layout_marginLeft="64dp"
				android:layout_marginTop="24dp"
				app:typeface="roboto_regular"
				tools:text="Fogel Artem"/>

			<ImageView
				android:id="@+id/emailIcon"
				android:layout_width="24dp"
				android:layout_height="22dp"
				android:layout_below="@id/nameView"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:paddingTop="2dp"
				android:src="@drawable/ic_email_black_24dp"
				android:visibility="gone"
				android:contentDescription="@string/email"
				tools:visibility="visible"/>

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/emailView"
				style="@style/itemTextUserInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/nameView"
				android:layout_marginLeft="64dp"
				android:visibility="gone"
				app:typeface="roboto_regular"
				tools:text="fogelion228@gmail.com"
				tools:visibility="visible"/>

			<View
				android:id="@+id/dividerView"
				style="@style/lineDivider"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_below="@id/emailView"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:visibility="gone"
				tools:visibility="visible"/>

			<ImageView
				android:id="@+id/companyIcon"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_below="@id/dividerView"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:contentDescription="@string/company"
				android:src="@drawable/ic_business_black_24dp"
				android:visibility="gone"
				tools:visibility="visible"/>

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/companyView"
				style="@style/itemTextUserInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/dividerView"
				android:layout_marginLeft="64dp"
				app:typeface="roboto_regular"
				tools:text="Jet Brains"/>

			<ImageView
				android:id="@+id/locationIcon"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_below="@id/companyView"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:contentDescription="@string/location"
				android:src="@drawable/ic_location_on_black_24dp"
				android:visibility="gone"
				tools:visibility="visible"/>

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/locationView"
				style="@style/itemTextUserInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/companyView"
				android:layout_marginLeft="64dp"
				app:typeface="roboto_regular"
				tools:text="Saint-Petersburg, Russia"/>

			<View
				android:id="@+id/divider1View"
				style="@style/lineDivider"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_below="@id/locationView"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="8dp"/>

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_below="@id/divider1View"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:contentDescription="@string/followers"
				android:src="@drawable/ic_people_black_24dp"/>

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/followersView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/divider1View"
				android:layout_marginLeft="64dp"
				android:layout_marginTop="16dp"
				android:textSize="18sp"
				tools:text="+100500"/>

			<com.devspark.robototextview.widget.RobotoTextView
				android:id="@+id/createdDay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_below="@id/divider1View"
				android:layout_marginRight="16dp"
				android:layout_marginTop="16dp"
				android:textSize="18sp"
				app:typeface="roboto_regular"
				tools:text="1945-05-09"/>

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_below="@id/divider1View"
				android:layout_marginRight="16dp"
				android:layout_marginTop="16dp"
				android:layout_toLeftOf="@id/createdDay"
				android:contentDescription="@string/registered_at"
				android:src="@drawable/ic_access_time_black_24dp"/>


		</RelativeLayout>

	</android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>